# pyLASAHandwritingDataset

./: README.md  pyproject.toml
src/pyLASAHandwritingDataset/: __init__.py  _downloader.py  dataset.py  downloader.py  motions.py  shapes.py
src/pylasahandwritingdataset/: __init__.py  dataset.py
tests/: test_1.py
