[project]
name = "pyLASAHandwritingDataset"
version = "0.2.0"
description = "LASA Handwriting dataset for Python3"
readme = "README.md"
keywords = ["LASA", "handwriting", "dataset"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [{ name = "Ashrith Sagar", email = "ashrithy@iisc.ac.in" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "platformdirs>=4.9.4",
    "pooch>=1.9.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
]

[project.urls]
"Homepage" = "https://github.com/AshrithSagar/pyLASAHandwritingDataset"
"Repository" = "https://github.com/AshrithSagar/pyLASAHandwritingDataset"
"Issues" = "https://github.com/AshrithSagar/pyLASAHandwritingDataset/issues"

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["scipy-stubs>=1.15.3.0"]
lint = ["ruff>=0.15.6"]
test = ["pytest>=9.0.2", "pytest-memray>=1.8.0"]
typecheck = [
    "basedpyright>=1.38.2",
    "mypy[mypyc]>=1.19.1",
    "pyrefly>=0.56.0",
    "pyright>=1.1.408",
    "ty>=0.0.23",
]
